# cmake-template

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  booststrap.sh  cmake_helpers.cmake  cmake_install.cmake.txt  vcpkg.json
myapp/: CMakeLists.txt  main.cpp
mylibrary/: CMakeLists.txt  mylibrary.hpp
